-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 21, 22, 23, 24
-
Component/s: hotspot
-
b08
In some cases, different threads may race to evacuate an object. The race is won by "CAS"ing in the forwarding pointer. The threads that lose this race must "back out" their allocation. The work to relativize stack chunks should only happen for the thread that wins the evacuation race.
- links to
-
Commit(master)
openjdk/jdk/2f2223d7
-
Review(master)
openjdk/jdk/20288