8336944: Shenandoah: Should only relativize stack chunks for successful evacuations

Reviewed-by: shade, ysr